--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -31,12 +31,14 @@ product-info {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   border-radius: 9999px;
   background: transparent;
-  transform: rotate(90deg);
   display: flex;
   justify-content: center;
   align-items: center;
   aspect-ratio: 1;
   margin: 0 10px;
+}
+.sp-product-zoom-media button.product-modal-nav-button .svg-wrapper svg {
+  transform: rotate(90deg);
 }
 .sp-product-zoom-container button.product-modal-thumbnail.media-fit-cover {
   border: 0;
@@ -731,7 +733,6 @@ a.product__text {
 .product-media-modal__content {
   max-height: 100vh;
   width: 100%;
-  overflow: auto;
 }
 
 .product-media-modal__content > *:not(.active),
