--- a/assets/promotion-image.css
+++ b/assets/promotion-image.css
@@ -38,6 +38,7 @@
 /* Category image styles */
 .category-image.mega-menu-category-image {
   max-width: 100%;
+  width: 100%;
   height: auto;
   display: block;
   object-fit: cover;
