--- a/assets/base.css
+++ b/assets/base.css
@@ -2341,6 +2341,7 @@ input[type="checkbox"] {
     vertical-align: middle;
     cursor: pointer;
     box-shadow: inset 0 0 5px #0003;
+    opacity: 1;
 }
 
 .sp-btn-wrapper .button--secondary:after,
