--- a/snippets/cstm-card-product.liquid
+++ b/snippets/cstm-card-product.liquid
@@ -279,11 +279,13 @@
                       {%- if card_product.selected_or_first_available_variant.available -%}
                         {{- 'cartt.svg' | inline_asset_content -}}
                       {%- else -%}
-                        {{ 'products.product.sold_out' | t }}
+
+                        {{- 'sold-out.svg' | inline_asset_content -}}
                       {%- endif -%}
                     </span>
                     <span class="sold-out-message hidden">
                       {{ 'products.product.sold_out' | t }}
+
                     </span>
                     {%- if horizontal_quick_add -%}
                       <span class="icon-wrap">
