--- a/sections/cstm-footer.liquid
+++ b/sections/cstm-footer.liquid
@@ -137,6 +137,7 @@
     height: 48px;
     border: 1px solid white;
     border-radius: 50px;
+    justify-content: center;
     }
     .top-social-links {
     gap: calc(10px + 9 * ((100vw - 360px) / (1920 - 360)));
